<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/centerBlockExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/smallPadding"
        android:paddingRight="@dimen/smallPadding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textAskExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallPadding"
            android:gravity="center"
            android:text="@string/exit_ask"
            android:textColor="@color/green"
            android:textSize="@dimen/underAppNameTextSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/selectCardBlockHeight"
            android:layout_marginTop="@dimen/smallPadding"
            android:paddingBottom="@dimen/verySmallPadding"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnYes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/blue_dark_radius_border"
                android:breakStrategy="high_quality"
                android:gravity="center"
                android:padding="@dimen/paddingInBox"
                android:text="@string/download"
                android:textColor="@color/white"
                android:textSize="@dimen/textInBox" />

            <View
                android:layout_width="@dimen/verySmallPadding"
                android:layout_height="1px" />

            <TextView
                android:id="@+id/btnNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/blue_dark_radius_border"
                android:breakStrategy="high_quality"
                android:gravity="center"
                android:padding="@dimen/paddingInBox"
                android:text="@string/storage"
                android:textColor="@color/white"
                android:textSize="@dimen/textInBox" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>