<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/opacityBlack"
    android:paddingTop="@dimen/selectCardBlockHeight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/smallPadding">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerYear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/yearSelectSize"
            android:layout_marginLeft="@dimen/smallPadding"
            android:layout_marginRight="@dimen/smallPadding"
            android:layout_marginBottom="@dimen/smallPadding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/smallPadding"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnResetSelectYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/smallPadding"
                android:layout_weight="1"
                android:background="@drawable/blue_dark_radius_border"
                android:gravity="center"
                android:padding="@dimen/smallPadding"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="@dimen/headTextSize" />

            <TextView
                android:id="@+id/btnAllSelectYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/smallPadding"
                android:layout_weight="1"
                android:background="@drawable/blue_dark_radius_border"
                android:gravity="center"
                android:padding="@dimen/smallPadding"
                android:text="@string/all"
                android:textColor="@color/white"
                android:textSize="@dimen/headTextSize" />

            <TextView
                android:id="@+id/btnSaveSelectYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/smallPadding"
                android:layout_weight="1"
                android:background="@drawable/blue_dark_radius_border"
                android:gravity="center"
                android:padding="@dimen/smallPadding"
                android:text="@string/select"
                android:textColor="@color/white"
                android:textSize="@dimen/headTextSize" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>